[package]
name = "pos_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["full"] }
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime", "dns-resolver", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
once_cell = "1.19"
dotenvy = "0.15"
anyhow = "1.0"
argon2 = "0.5"
hex = "0.4"
